css/stickymenu.css
body {
	font-size: 16px;
	line-height: 1.4;
	margin: 0;
	font-family: Georgia, Times, "Times New Roman", serif;
	background-color: #EEE;
}

.clearfix:before,.clearfix:after {content: " "; display: table;}
.clearfix:after {clear: both;}
.clearfix {zoom: 1;}

#container {
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	width: 70%;
	margin: auto;
	background-color: #fefefe;
	color: #242B30;
	padding: 55px 1%;
}

#container h1 {font-size: 1.8em;}
#container h2 {font-size: 1.35em;}

#navbar {
	width: 70%; /* Should be same width as content container */
	position: fixed;
	background-color: #EEE;
	top: 0;	
	left: 15%; /* Left is 100-[content width]/2). */
	right: 15%;
	opacity: 1;
	z-index: 100;
	color: black;
	text-align: center;
	font-size: 20px;
	-webkit-transition: all 1s ease;
	transition: all 1s ease;
}

#bottom-nav nav {
	width: 70%;
	text-align: center;
	margin: auto;
}

nav#navbar {
	text-align: center;
	min-height: 0;
}

#bottom-nav img {
	height: 16px;
	width: 16px;
}

#bottom-nav nav ul {
	list-style: none;
}

#bottom-nav nav ul li {
	display: inline-block;
}

nav ul {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	list-style-type: none;
	margin: auto;
	padding: 5px 0;
}

nav#navbar ul li {
	margin: 0;
	padding: 8px;
	display: inline-block;
}

nav ul li a {
	text-decoration: none;
	color: black;
}

nav ul li a.active {
	border-bottom: 2px solid black;
}

nav ul li a.active:hover {
	text-decoration: none;
}

nav ul li a:hover {
	text-decoration: underline;
}

nav ul li a:visited {
	text-decoration: none;
}

.fixednav {
	left: 0 !important;
	width: 100% !important;
	opacity: .9 !important;
}

.filler {font-size: .8em;}

.fixednav ul {
	-webkit-transition: all 1s ease;
	transition: all 1s ease;
	width: 15% !important;
	text-align: center;
}
.fixednav ul li {display: block; float: none;}
.fixednav ul:nth-of-type(2) li {float: none;}

		
@media only screen and (max-width: 800px) {
	body {font-size: 15px;}
	
	#container {
		width: 80%;
		position: absolute;
		left: 20%;
		padding: 1%;
	}

	#navbar {
		width: 20%;
		position: fixed;
		top: 0; left: 0;
		background-color: #333333;
		color: white !important;
		opacity: 0.92;
		-webkit-transition: none;
		transition: none;
	}

	nav#navbar ul li {
		display: block;
	}

	nav#navbar ul li a {
		text-decoration: none;
		color: white !important;
	}

	nav ul {width: 100%; padding: 0;}
	nav ul:nth-of-type(2) {float: left;}
	nav ul li, nav ul:nth-of-type(2) li {float: none;}
	
	nav#navbar ul a {display: block;}

	.fixednav {
		left: 0 !important;
		width: 20% !important;
		opacity: 1 !important;
	}

	.fixednav ul {
		-webkit-transition: none;
		transition: none;
		width: 100% !important;
		text-align: left;
	}
}

@media only screen and (max-width: 600px) {
	body {font-size: 14px;}
	
	nav#navbar {
		top: 55px;
		left: -150px;
		width: 150px;
		background-color: #333333;
		-webkit-transition: all 300ms;
		transition: all 300ms;
		opacity: 0.92;
	}

	nav#navbar ul li {
		display: block;
	}

	nav#navbar ul li a {
		text-decoration: none;
		color: white !important;
	}

	nav#navbar ul {
		-webkit-transition: all 300ms;
		transition: all 300ms;
	}

	body.menu-active nav#navbar {
		left: 0px;
	}

	body.menu-active nav#navbar ul {
		left: 0px;
	}

	#container {
		position: fixed;
		top: 0; left: 0;
		width: 100%;
		height: 100%;
		padding: 0 1% 1% 43px;
		overflow: scroll;
	}

	div.menu-trigger {
		position: fixed;
		top: 7px; left: 7px;
		width: 32px; height: 32px;
		background: #333333;
		cursor: pointer;
		border-radius: 5px;
		-webkit-transition: all 300ms;
		transition: all 300ms;
		z-index: 999;
		opacity: 0.8;
	}
	
	div.menu-trigger:before { 
		content: '☰';
		display: inline-block;
		width: 30px;
		height: 30px;
		font-size: 1.5em;
		text-align: center;
		text-transform: none;
		line-height: 30px;
		color: #fff;
	}
}

